--- a/services/devd-trigger-uevents/start.in
+++ b/services/devd-trigger-uevents/start.in
@@ -1,3 +1,3 @@
 #!@BINDIR@/execlineb -P
 pipeline { find /sys -type f -name uevent -print0 }
-forstdin -0 -p f import -u f redirfd -w 1 $f echo add
+forstdin -0 -p f importas -u f f redirfd -w 1 $f echo add
